--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=FaturaCartaoCreditoJob
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.username=root
+spring.datasource.password=123456
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/fatura_cartao_credito
+app.datasource.username=root
+app.datasource.password=123456
+spring.batch.jdbc.initialize-schema=always
